Don't allow WebRender for AMD on non-nightly for non-Windows platforms
Categories
(Core :: Graphics: WebRender, defect, P1)
Tracking
()
| Tracking | Status | |
|---|---|---|
| firefox-esr60 | --- | unaffected |
| firefox-esr68 | --- | unaffected |
| firefox67 | --- | unaffected |
| firefox67.0.1 | --- | unaffected |
| firefox68 | - | unaffected |
| firefox69 | --- | verified |
People
(Reporter: aosmond, Assigned: aosmond)
References
(Regression)
Details
(Keywords: regression)
Attachments
(3 files, 1 obsolete file)
|
1.66 KB,
patch
|
jcristau
:
approval-mozilla-beta-
|
Details | Diff | Splinter Review |
|
13.44 KB,
text/plain
|
Details | |
|
10.36 KB,
text/plain
|
Details |
As titled, we shouldn't allow qualified WebRender at this moment on non-Windows (e.g. AMD + Linux => WebRender on nightly, basic on beta/release) for AMD devices unless it is nightly. There are still bugs to resolve before this can ship (see wr-linux).
| Assignee | ||
Updated•6 years ago
|
| Assignee | ||
Updated•6 years ago
|
| Assignee | ||
Comment 1•6 years ago
|
||
Comment 2•6 years ago
|
||
This is getting kind of annoying to manage with all the different combinations of devices, platforms, and channels. We should reorganize this code so it's more obvious what is enabled where and make it easier to enable more configurations (as a follow-up bug)
| Assignee | ||
Comment 3•6 years ago
|
||
(In reply to Kartikaya Gupta (email:kats@mozilla.com) from comment #2)
This is getting kind of annoying to manage with all the different combinations of devices, platforms, and channels. We should reorganize this code so it's more obvious what is enabled where and make it easier to enable more configurations (as a follow-up bug)
Agreed, I had the same thought. I'll file a bug about this and see what can be done...
Comment 5•6 years ago
|
||
| bugherder | ||
| Assignee | ||
Comment 6•6 years ago
|
||
Comment on attachment 9073280 [details]
Bug 1560600 - Don't allow WebRender for AMD on non-nightly for non-Windows platforms.
Beta/Release Uplift Approval Request
- User impact if declined: Linux users with AMD graphics cards may get WebRender in beta/release when we did not expect them to.
- Is this code covered by automated tests?: Yes
- Has the fix been verified in Nightly?: Yes
- Needs manual test from QE?: No
- If yes, steps to reproduce:
- List of other uplifts needed: None
- Risk to taking this patch: Low
- Why is the change risky/not risky? (and alternatives if risky): It is a trivial build time check to disable WebRender for certain OS/release channel/hardware configurations.
- String changes made/needed:
Comment 7•6 years ago
|
||
Comment on attachment 9073280 [details]
Bug 1560600 - Don't allow WebRender for AMD on non-nightly for non-Windows platforms.
approved for 68.0b14
Comment 8•6 years ago
|
||
| bugherder uplift | ||
Comment 9•6 years ago
|
||
Backed out for build bustages.
Failure log: https://treeherder.mozilla.org/logviewer.html#/jobs?job_id=253342914&repo=mozilla-beta&lineNumber=26214
Backout: https://hg.mozilla.org/releases/mozilla-beta/rev/90725f025a3b433f0bf0d69359905b51c3711d6a
Updated•6 years ago
|
| Assignee | ||
Comment 10•6 years ago
|
||
Reasons got added in bug 1556007 which I didn't request uplift for. We don't need to take it, I will just use the old reason.
try: https://treeherder.mozilla.org/#/jobs?repo=try&revision=29eb6d860ff3b49b34cbffe39bd64f23f4441e42
| Assignee | ||
Comment 11•6 years ago
|
||
| Assignee | ||
Comment 12•6 years ago
|
||
Comment on attachment 9073912 [details] [diff] [review]
uplift for beta, v1
Beta/Release Uplift Approval Request
- User impact if declined:
- Is this code covered by automated tests?: Yes
- Has the fix been verified in Nightly?: Yes
- Needs manual test from QE?: Yes
- If yes, steps to reproduce:
- List of other uplifts needed: None
- Risk to taking this patch: Low
- Why is the change risky/not risky? (and alternatives if risky): Same as comment 6, but I tweaked the error code because of a missing uplift dependency (which is unimportant, it just expands our error code list and we can use an existing one in beta).
- String changes made/needed:
Updated•6 years ago
|
Updated•6 years ago
|
Updated•6 years ago
|
Updated•6 years ago
|
Comment 13•6 years ago
|
||
Actually wouldn't this be blocked on mac and linux by https://hg.mozilla.org/releases/mozilla-beta/file/1d1f44e16b8ac54b14a32a2ce170b4022f9a6e43/widget/cocoa/GfxInfo.mm#l311 and https://hg.mozilla.org/releases/mozilla-beta/file/1d1f44e16b8ac54b14a32a2ce170b4022f9a6e43/widget/GfxInfoX11.cpp#l350? 68 doesn't have bug 1554251 so AFAICT isn't actually affected by this.
(The nvidia case also doesn't have an explicit check for windows in WebRenderHardwareQualificationStatus().)
Updated•6 years ago
|
Comment 14•6 years ago
|
||
Confirmed on irc this isn't an issue before 1554251.
Updated•6 years ago
|
Updated•6 years ago
|
Comment 15•6 years ago
|
||
Hi Andrew Osmond,
I am trying to verify this issue and to be able to do that can you please help me with a list that contains supported AMD graphics cards? I need this to be able to reproduce this issue.
I tested on AMD Radeon (TM) Rx 480 Graphics, Ubuntu platform 67.0, 68.0 -> Compositing: Basic
Nightly from 2019.06.21 -> Compositing: Basic
latest Nightly 69.0a1 (2019.07.02) -> Compositing: Basic
Thank you!
| Assignee | ||
Comment 16•6 years ago
|
||
I think that AMD card should be qualified, it might be your Mesa version. Can you attach your about:support? Thanks!
Comment 17•6 years ago
|
||
Comment 18•6 years ago
|
||
Comment 19•6 years ago
|
||
I attached the about:support for Fx 69.0a1 latest nightly and Fx 68.0.
Updated•6 years ago
|
Updated•6 years ago
|
Comment 20•6 years ago
•
|
||
(In reply to Timea Zsoldos [:zstimi/tzsoldos], Desktop Release QA from comment #17)
"osVersion": "Linux 4.13.0-38-generic",
"windowLayerManagerType": "Basic",
"adapterDescription": "AMD Radeon (TM) RX 480 Graphics",
"adapterVendorID": "0x1002",
"adapterDeviceID": "AMD Radeon (TM) RX 480 Graphics",
"adapterRAM": "0MB",
"adapterDrivers": "",
"driverVendor": "ati/unknown",
"driverVersion": "",
"driverDate": "",
"webgl1Renderer": "WebGL creation failed: \n* Refused to create native OpenGL context because of blacklist entry: FEATURE_FAILURE_OLD_FGLRX\n* Exhausted GL driver options.",
"webgl2Renderer": "WebGL creation failed: \n* Refused to create WebGL2 context because of blacklist entry: FEATURE_FAILURE_OLD_FGLRX",
(In reply to Timea Zsoldos [:zstimi/tzsoldos], Desktop Release QA from comment #15)
Ubuntu
Thanks!
https://packages.ubuntu.com/xenial-updates/linux-image-4.13.0-38-generic
Ubuntu 16.04 is not supported: For WebRender, you need at least Ubuntu 18.04 LTS, which has "Mesa 18.2 or newer".
Ubuntu 18.04 LTS should have xserver-xorg-video-amdgpu installed by default. Optionally, a newer driver is available via xserver-xorg-video-amdgpu-hwe-18.04.
Comment 21•6 years ago
|
||
I've checked on Windows 10 x64, using Fx 68.0 and 67.0 Webrender is ON by default, however on Ubuntu 18.04 with AMD RX550 it's only ON by default on Nightly (Compositing: WebRender).
Updated•6 years ago
|
Updated•6 years ago
|
Updated•6 years ago
|
| Assignee | ||
Updated•6 years ago
|
Updated•3 years ago
|
Description
•