Bug 1560600 - Don't allow WebRender for AMD on non-nightly for non-Windows platforms. r=kats a=jcristau

Differential Revision: https://phabricator.services.mozilla.com/D35569

--HG--
extra : source : 60c8d0cdd443bad2f5c840196ea3a99ba45c28c1